# OffGrid

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_v1.0.0.md  gradle.properties  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  device_compatibility.yml  feature_request.yml  outdoor_test_report.yml  ui_ux_feedback.yml
.github/workflows/: android-ci.yml
.skill/: INDEX.md  ROLES.md  TASKS.md
.skill/RULES/: pro-android-app.md  pro-android-system-test.md  pro-c-cpp.md  pro-general-mechanism.md  pro-general-pm.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opus_jni.cpp
app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
docs/: ARCHITECTURE.md  BUG_M4-T5_AUTO_MODE_GROUP_DROP.md  DESIGN_SYSTEM.md  DEVELOPER_GUIDE.md  INFO_ARCHITECTURE.md  M1_OPUS_LATENCY_TEST.md  M1_WIFI_DIRECT_TEST.md  M2_VOICE_PIPELINE.md  M3_ALPHA_TEST.md  M4-T5_MANUAL_NETWORK_CONFIG.md  M4-T5_VERIFICATION.md  M4-T6_POWER_SAVING.md  M4-T6_VERIFICATION.md  M4-T8_BETA_TEST.md  M4-T8_BETA_TEST_REPORT.md  M5-T1_OUTDOOR_TEST_PLAN.md  M5-T3_LICENSE_COMPLIANCE.md  M5-T3_OPUS_REPLACEMENT.md  M5-T3_REGRESSION_REPORT.md  M5-T3_RELEASE_POLISH_PLAN.md  PRD.md  PROGRESS_TRACKING.md  PROJECT_PLAN.md  UI_DESIGNS.md
gradle/wrapper/: gradle-wrapper.properties
scripts/: run_m4t5_verification.sh  run_m4t6_verification.sh  run_m4t8_beta_test.sh
(+52 files in other folders)
